# openedk

./: .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: FindCatch2.cmake  Findfff.cmake  ModuleHelper.cmake  TestHelper.cmake
include/openedk/container/: array.h
src/: CMakeLists.txt
src/container/: array.c
test/unit/: CMakeLists.txt  fff_helper.h  test_runner.cpp
test/unit/container/: array_test.cpp
